--- a/src/pages/chats/general/General.css
+++ b/src/pages/chats/general/General.css
@@ -100,10 +100,15 @@
 {
     display: flex;
     align-items: center; 
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+    gap: 0.75rem;
+    word-break: break-word;
     white-space: pre-wrap;
     width: 100%;
+}
+
+.message-content
+{
+    flex: 1;
 }
 
 .message-right {
