--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,12 +1,57 @@
+
 #userProfile
 {
     width: 60%;
     height: calc(100% - 14rem);
-    padding-block: 5rem;
+    padding-block: 2rem;
     position: absolute;
     left: 50%;
+    bottom: 0;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
-    
+    gap: 2rem;
+    font-size: 18px;
+}
+
+#userProfile h3
+{
+    font-size: 30px;
+}
+
+.username
+{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.editbtn
+{
+    display: flex;
+    align-items: center;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.editbtn:hover
+{
+    background: #1a1a1a;
+}
+
+.editForm
+{
+    display: flex;
+    gap: 2rem;
+}
+
+.editForm input
+{
+    background: #191919;
+    border: none;
+    border-radius: 0.25rem;
+    padding-inline: 1rem;
 }
