--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -4,13 +4,14 @@
     width: 60%;
     height: calc(100% - 14rem);
     padding-block: 2rem;
+    padding-left: 5rem;
     position: absolute;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     font-size: 18px;
 }
 
@@ -24,6 +25,57 @@
     display: flex;
     gap: 2rem;
     align-items: center;
+}
+
+.email
+{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.profileImage
+{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.profileImage input[type='file'] {
+    width: 15rem;
+    padding-left: 3.5rem;
+}
+
+.profileImage label {
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: white;
+    border-radius: 0.25rem;
+}
+
+.profileImage button {
+    padding: 0.5rem 1rem;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.pfp
+{
+    width: 10rem;
+    border-radius: 5rem;
+}
+
+.stack
+{
+    width: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 }
 
 .editbtn
