skoro pa finish

--- a/src/pages/chats/general/General.css
+++ b/src/pages/chats/general/General.css
@@ -85,13 +85,12 @@
 
 .messages
 {
-    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    gap: 1rem;
-    margin-bottom: 0.5rem;
+    gap: 0.15rem;
+    margin-bottom: 1rem;
     font-size: 15px;
     max-width: 60%;
     position: relative;
@@ -100,11 +99,14 @@
 .message
 {
     display: flex;
-    align-items: center; 
-    gap: 0.75rem;
+    align-items: center;
+    gap: 0.3rem;
     word-break: break-word;
     white-space: pre-wrap;
-    width: 100%;
+    width: calc(100% - 1.4rem);
+    padding: 0.7rem;
+    text-align: start;
+    border-radius: 0.3rem;
 }
 
 .message-content
@@ -113,19 +115,23 @@
 }
 
 .message-right {
-    text-align: right;
-    background-color: #313131; /* Light green background for own messages */
     margin-left: auto;
     border-radius: 0.3rem;
-    border-bottom-right-radius: 0;
+}
+
+.message-right .message
+{
+    background-color: #323232;
 }
 
 .message-left {
-    text-align: left;
-    background-color: #28a745; /* White background for others' messages */
     margin-right: auto;
     border-radius: 0.3rem;
-    border-bottom-left-radius: 0;
+}
+
+.message-left .message
+{
+    background-color: #28a745; 
 }
 
 .deleteButton
