--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,8 +1,38 @@
 
 .homepage
 {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    height: calc(100% - 13rem);
+    padding-bottom: 5rem;
 }
 
+.welcome
+{
+    position: relative;
 
+    max-width: 1100px;
+}
+
+.welcome h1
+{
+    padding-top: 10rem;
+    font-size: 70px;
+    font-family: cursive;
+}
+
+#welcomeBlob
+{
+    position: absolute;
+    z-index: -1;
+    min-width: 600px;
+    width: 80%;
+    top: -1rem;
+    left: 5rem;
+}
